# skb-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  foo.pl  org.freedesktop.Skb.xml  skb.h  skb_functions.c  skb_gdbus.c  skb_service.c
contrib/: compile.sh  skb_main.c
doc/: CMakeLists.txt  skb.tex
icparc_solver/: CMakeLists.txt  Makefile  cmake_install.cmake  eplex_params.h
